...
@end

@implementation LocateCellTableViewController

NSString *const SCOPE_ALL       = @"All";
NSString *const SCOPE_LTE       = @"LTE";
NSString *const SCOPE_WCDMA     = @"WCDMA";
NSString *const SCOPE_GSM       = @"GSM";
NSString *const SCOPE_ADDRESS   = @"Address";

#pragma mark - LocateCellDelegate protocol
-(void) cellStartingWithResponse:(NSMutableArray*) cells error:(NSError*) theError {
    if (theError != Nil) {
...
    self.filteredListContent = [[NSMutableArray alloc] init];

    self.searchController = [[UISearchController alloc] initWithSearchResultsController:nil];
    self.searchController.searchResultsUpdater = self;
    self.searchController.dimsBackgroundDuringPresentation = NO;
    
    self.searchController.searchBar.placeholder = @"Cell name";
    self.searchController.searchBar.scopeButtonTitles = @[SCOPE_ALL, SCOPE_LTE, SCOPE_WCDMA, SCOPE_GSM, SCOPE_ADDRESS];
    self.searchController.searchBar.delegate = self;
    
    self.theTableView.tableHeaderView = self.searchController.searchBar;
    
    if ([[UIDevice currentDevice] userInterfaceIdiom] == UIUserInterfaceIdiomPhone) {
...
