...
    if (self.isCellParametersLoading) {
        cell.detailedCellLabel.text = @"Parameters are loading...";
    } else {
        if (self.theCell.parametersBySection == Nil) {
            cell.detailedCellLabel.text = @"No cell parameters available";
        } else {
            cell.detailedCellLabel.text = @"Display main cell parameters";
        }
        
    }
    
    return cell;
}
...
